--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,35 @@
+* {
+    font-family: 'Roboto';
 
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+}
+
+.results-display-upper {
+    font-size: 1.5rem;
+    margin: 10px;
+}
+
+.results-display {
+    font-size: 1.5rem;
+    margin: 10px;
+}
+
+.winner-announce {
+    font-size: 1.5rem;
+    margin: 10px;
+}
 
 h1 {
     text-align: center;
